# unfold

./: .gitignore  CITATION.cff  MANIFEST.in  README-zh-CN.md  README.md  SDF ecoinvent SP test 3.csv  paper.bib  paper.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: draft-pdf.yml  main.yml
conda/: meta.yaml
dev/: memory_profiling.py  timing.py  unfold_test.ipynb
examples/: db A.yaml  db B.yaml  unfold examples.ipynb
tests/: test_import.py  test_reproducing_db.py
tests/fixture/: reference_database.yaml
unfold/: __init__.py  brightway25_export.py  brightway2_export.py  data_cleaning.py  export.py  filesystem_constants.py  fold.py  unfold.py  utils.py
unfold/data/: outdated_flows.yaml  outdated_units.yaml
