[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unfold"
version = "1.2.4"
description = "Unpacks LCA scenario databases."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Romain Sacchi", email = "romain.sacchi@psi.ch" }
]
dependencies = [
  "numpy<2.0.0",
  "pandas",
  "bw2io",
  "bw2data",
  "bw2calc",
  "prettytable",
  "datapackage",
  "sparse",
  "scipy",
  "pyyaml",
  "wurst>=0.4.0",
  "pyprind"
]
classifiers = [
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Visualization"
]

[project.urls]
Homepage = "https://github.com/polca/premise"
Repository = "https://github.com/polca/premise"

[tool.setuptools]
include-package-data = true

# Find all Python packages under the repo (equivalent to your os.walk of "unfold")
[tool.setuptools.packages.find]
where = ["."]
include = ["unfold*"]

# Include non-Python data in wheels (CSV/YAML in any subfolder of the package)
[tool.setuptools.package-data]
"unfold" = ["**/*.csv", "**/*.yml", "**/*.yaml"]
